--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,12 @@
 {
+    "autoload": {
+        "classmap": [
+            "controlleurs/",
+            "managers/",
+            "models/",
+            "services/"
+        ]
+    },
     "require": {
         "vlucas/phpdotenv": "^5.6",
         "twig/twig": "^3.0"
